fuirther web page suttff

--- a/websitefiles/base.html
+++ b/websitefiles/base.html
@@ -11,5 +11,9 @@
 		The random number is:
 		<cb>{{ random_number }}</cb>! <!--Gets the random number from the python file-->
 	</p>
-	<a href="/2">Visit site 2</a>
+
+  <p>
+	<a href="/2">Visit site 2</a><br>
+  <a href="/3">Visit site 3</a>
+  </p>
 </body>
