--- a/websitefiles/db.html
+++ b/websitefiles/db.html
@@ -8,12 +8,12 @@
 <body>
 	<h1>Hello!</h1>
 	<p>
-		Alec has a
-		<cb>E</cb>! <!--Gets the random number from the python file--> 
+		The random string is:
+		<cb>{{ db }}</cb>! <!--Gets the random number from the python file--> 
 	</p>
 
-
+  <p>
 	<a href="/">Go back</a> <br>
-  <a href="/3">Visit site 3</a>
-
+  <a href="/2">Visit site 2</a>
+  </p>
 </body>
