website now takes inputs!!

--- a/websitefiles/db.html
+++ b/websitefiles/db.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <head>
-	<title>Flask Tutorial!</title>
+	<title>Waddlebase</title>
 	<script src="/static/base.js"></script>
 	<link href="/static/base.css" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://cdn.discordapp.com/avatars/409144850529910785/1e64f0ea0e0afca4708cd24a0957d01f.png?size=64"> 
 </head>
 <body>
 	<h1>Hello!</h1>
 	<p>
-		The random string is:
-		<cb>{{ db }}</cb>! <!--Gets the random number from the python file--> 
+		List of orders:
+		{{ db }}
 	</p>
 
   <p>
