--- a/websitefiles/base.html
+++ b/websitefiles/base.html
@@ -3,13 +3,14 @@
 	<title>Waddlebase</title>
 	<script src="/static/base.js"></script>
 	<link href="/static/base.css" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://cdn.discordapp.com/avatars/409144850529910785/1e64f0ea0e0afca4708cd24a0957d01f.png?size=64">  
 </head>
 <body>
 	<h1>Hello!</h1>
 	<p>
 		The random number is:
-		<cb>{{ random_number }}</cb>! <!--Gets the random number from the python file-->
+		{{ random_number }}! <!--Gets the random number from the python file-->
 	</p>
 
   <p>
